src/objects/FieldExperienceProcess__c.object
<CustomObject>
    <description>The object that represents field experience-related processes such as placements, observations, appeals, etc.</description>
    <fields>
        <fullName>AbsenceDescription__c</fullName>
        <description>This is where the student can describe the reason for their absence in great detail.</description>
        <inlineHelpText>Describe the reason for you absence.</inlineHelpText>
        <label>Absence Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AbsenceReason__c</fullName>
        <description>The reason a student might be absent from their field experience.</description>
        <inlineHelpText>Select the reason for your absence.</inlineHelpText>
        <label>Absence Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Illness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Emergency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inclement Weather</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AbsenceResponse__c</fullName>
        <description>Open text field that allows the user to enter in a response to the reported absence. This field will be used as part of an automatic email alert sent via workflow.</description>
        <label>Absence Response</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AbsenceStatus__c</fullName>
        <label>Absence Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AbsenteeForm__c</fullName>
        <label>Absentee Form</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AcademicMonitoring__c</fullName>
        <label>Academic Monitoring</label>
        <picklist>
            <picklistValues>
                <fullName>1 &quot;2&quot; Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 &quot;2&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 &quot;2&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 &quot;2&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 &quot;2&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 &quot;1&quot; Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 &quot;1&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 &quot;1&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 &quot;1&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 &quot;1&quot; Ratings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ActionNeeded__c</fullName>
        <label>Action Needed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extend 1 week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extend 2 weeks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ActionTaken__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Action Taken</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AppealFollowUpDate__c</fullName>
        <label>Appeal Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AppealReasonNote__c</fullName>
        <description>reason notes for column view</description>
        <label>Appeal Reason Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AppealReason__c</fullName>
        <description>reason why there is need for an appeal</description>
        <label>Appeal Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AppealStatus__c</fullName>
        <label>Appeal Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
                <color>#66FF99</color>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Requesting further information</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Probation until future date</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Approved by Manager Field Experience</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>Approved by Placement Specialist</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>Approved by Dean TC</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>Denied by Manager Field Experiences</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>Denied by Placement Specialist</fullName>
                <color>#641CCF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Denied by Dean TC</fullName>
                <color>#F96FB7</color>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed; assigned to PS for decision</fullName>
                <color>#2F5D85</color>
            </picklistValues>
            <picklistValues>
                <fullName>Appeal Withdrawn</fullName>
                <color>#AFCADF</color>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
                <color>#8F6429</color>
            </picklistValues>
            <picklistValues>
                <fullName>Question Answered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied by Placement Coordinator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AppealType__c</fullName>
        <label>Appeal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Late Entry to DT Cohort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Exam/s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Progress Audit 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Progress Audit 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Cohort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Appeal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Placement Variation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teacher Success</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AuditNeedsReview__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marked by the audit reviewer if it requires special attention.</description>
        <inlineHelpText>Check this box if you have questions about the audit and would like it verified.</inlineHelpText>
        <label>Audit Needs Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AuditNumber__c</fullName>
        <label>Audit Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSApplicationOnFile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>is the cs application on file</description>
        <label>CS Application On File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSEmail__c</fullName>
        <label>CS Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CSRequest__c</fullName>
        <description>Requesting clinical supervisor for student&apos;s DT</description>
        <label>CS Request</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreed - Pending Docs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Check Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CategoryofStudent__c</fullName>
        <description>Cross-Object formula field that pulls the Category of Student value from Field Experiences.</description>
        <formula>TEXT(FieldExperience__r.CategoryOfStudent__c)</formula>
        <label>Category of Student</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckAnticipatedBaseAmount__c</fullName>
        <formula>IF( TeacherOfRecord__c = true, 0,
IF(OR($RecordType.Name=&apos;CS Request&apos;,  $RecordType.Name=&apos;CS Request Locked&apos;),  
      IF( StudentProgramCode__c =&apos;MSEDL&apos; || StudentProgramCode__c =&apos;MAELLP12&apos; || StudentProgramCode__c =&apos;ENDELL&apos; || StudentProgramCode__c =&apos;ENDEDL&apos;,250,500), 
         IF(OR($RecordType.Name=&apos;Placement Attempt&apos;, $RecordType.Name=&apos;Placement Attempt Locked&apos;),
            IF(StudentProgramCode__c =&apos;MSEDL&apos; || StudentProgramCode__c =&apos;MAELLP12&apos; || StudentProgramCode__c =&apos;ENDELL&apos; || StudentProgramCode__c =&apos;ENDEDL&apos;,0, 
                IF(StudentProgramCode__c =&apos;MSSP&apos;,0,150 )  
            ), 0
          )    
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check Anticipated Base Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CheckBaseAmount__c</fullName>
        <formula>If( CheckOverrideBaseAmount__c  &gt;= 0 ,  CheckOverrideBaseAmount__c, CheckAnticipatedBaseAmount__c)</formula>
        <label>Check Base Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CheckExpenseAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total expense amount for this CS/Host Teacher for this placement</description>
        <inlineHelpText>The total expense amount for this CS/Host Teacher for this placement</inlineHelpText>
        <label>Check Expense Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CheckFinalObservationOverride__c</fullName>
        <description>For split placements sometimes the last observation the HT/CS has to do is not the Final.  This override will control that</description>
        <inlineHelpText>For split placements sometimes the last observation the HT/CS has to do is not the Final.  This override will control that</inlineHelpText>
        <label>Check Final Observation Override</label>
        <picklist>
            <picklistValues>
                <fullName>Final</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midterm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation 6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CheckMileageAmout__c</fullName>
        <description>This is the calculated amount for check reimbursement based on the mileage</description>
        <formula>CheckMileage__c * 0.565</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the calculated amount based on the mileage</inlineHelpText>
        <label>Check Mileage Amout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CheckMileage__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total number of miles the Clinical Supervisor Must travel to be reimbursed.</description>
        <inlineHelpText>The total number of miles the Clinical Supervisor Must travel to be reimbursed. 

Standard = Total Round Trip Miles
7 x round trip = Total Miles
8 x round trip = Total Miles for Special Ed
Note exceptions to this rule.</inlineHelpText>
        <label>Check Mileage</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CheckOverrideBaseAmount__c</fullName>
        <description>If there is an exemption to the calculated base amount, this allows the user to override it</description>
        <inlineHelpText>If there is an exemption to the calculated base amount, this allows the user to override it</inlineHelpText>
        <label>Check Override Base Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CheckReadyForEval__c</fullName>
        <description>Whether or not the student should be picked up by the check process to finish and process the check.</description>
        <formula>IF( CheckWorkComplete__c, &apos;Y&apos;,
  CASE  ( $RecordType.Name, 
   &apos;CS Request&apos;,
               IF(  BLANKVALUE(TEXT(CheckFinalObservationOverride__c),&apos;Final&apos;)=&apos;Final&apos;, 
                                                                                                                 IF( FieldExperience__r.ObservationCSFinalComplete__c = TRUE, &apos;Y&apos;,&apos;N&apos;),
                                                                                                                    IF(AND(TEXT(CheckFinalObservationOverride__c)=&apos;Midterm&apos;, 
                                                                                                                        FieldExperience__r.ObservationCSMidtermComplete__c =TRUE ),&apos;Y&apos;,&apos;N&apos;  )  ),
    &apos;Placement Attempt&apos;,  
             IF(  BLANKVALUE(TEXT(CheckFinalObservationOverride__c),&apos;Final&apos;)=&apos;Final&apos;, 
                                                                                                                 IF( FieldExperience__r.ObservationHTFinalComplete__c = TRUE, &apos;Y&apos;,&apos;N&apos;),  
                                                                                                                     IF(AND(TEXT(CheckFinalObservationOverride__c)=&apos;Midterm&apos;, 
                                                                                                                 FieldExperience__r.ObservationHTMidtermComplete__c =TRUE ),&apos;Y&apos;,&apos;N&apos;  )  ),              
    null
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Whether or not the student should be picked up by the check process to finish and process the check.</inlineHelpText>
        <label>Check Ready for Eval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckSendTo__c</fullName>
        <description>This field determines which address to send the check to</description>
        <inlineHelpText>This field determines which address to send the check to</inlineHelpText>
        <label>Check Send To</label>
        <picklist>
            <picklistValues>
                <fullName>Home Address</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>District Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Address</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CheckStatus__c</fullName>
        <description>The check status is the final check/approval before a check gets generated for the prescribed amounts</description>
        <inlineHelpText>The check status is the final check/approval before a check gets generated for the prescribed amounts</inlineHelpText>
        <label>Check Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Payment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CheckTotalAmount__c</fullName>
        <formula>CheckBaseAmount__c  +  CheckMileageAmout__c +  CheckExpenseAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CheckWorkComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manual override to appear on the pending check list even if all observations are not in</description>
        <inlineHelpText>This field is a manual override for the auto mechanisms based on observations</inlineHelpText>
        <label>Check Work Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClassroomEnvironmentandManagement__c</fullName>
        <label>Classroom Environment and Management</label>
        <picklist>
            <picklistValues>
                <fullName>1 &quot;2&quot; Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 &quot;2&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 &quot;2&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 &quot;2&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 &quot;2&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 &quot;1&quot; Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 &quot;1&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 &quot;1&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 &quot;1&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 &quot;1&quot; Ratings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ClinicalSupervisorEmail__c</fullName>
        <formula>ClinicalSupervisor__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clinical Supervisor Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClinicalSupervisorFirstName__c</fullName>
        <formula>ClinicalSupervisor__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clinical Supervisor First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClinicalSupervisorLastName__c</fullName>
        <formula>ClinicalSupervisor__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clinical Supervisor Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClinicalSupervisorPhone__c</fullName>
        <formula>ClinicalSupervisor__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clinical Supervisor Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClinicalSupervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Supervisor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Field Experience Processes (Clinical Supervisor)</relationshipLabel>
        <relationshipName>FieldExperienceProcesses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CoTeacher__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The student teacher is completing this portion of her Demonstration Teaching as a Co-Teacher.</description>
        <inlineHelpText>Student is Co-Teaching for this Placement.</inlineHelpText>
        <label>Co-Teacher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cohort__c</fullName>
        <description>Return the name of the cohort related to the parent field experience.</description>
        <formula>FieldExperience__r.Cohort__r.Name</formula>
        <label>Cohort</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CollaborativePractitioner__c</fullName>
        <label>Collaborative Practitioner</label>
        <picklist>
            <picklistValues>
                <fullName>1 &quot;2&quot; Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 &quot;2&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 &quot;1&quot; Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 &quot;1&quot; Ratings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CommentBlock10__c</fullName>
        <label>Comment Block 10</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommentBlock11__c</fullName>
        <label>Comment Block 11</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommentBlock12__c</fullName>
        <label>Comment Block 12</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContentExplanationandDemonstration__c</fullName>
        <label>Content Explanation and Demonstration</label>
        <picklist>
            <picklistValues>
                <fullName>1 &quot;No&quot; Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 &quot;No&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 &quot;No&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 &quot;No&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 &quot;No&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 &quot;No&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 &quot;No&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 &quot;No&quot; Ratings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CourtesyPlacement__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if another institution is doing placement of WGU.</inlineHelpText>
        <label>Courtesy Placement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DTAuditDate__c</fullName>
        <label>DT Audit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTAuditObjectiveExamsRemaining__c</fullName>
        <description>Number of objective exams remaining after this current audit.</description>
        <label>DT Audit #Objective Exams Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DTAuditResults__c</fullName>
        <description>Application reviewers final results after audit completion.</description>
        <inlineHelpText>Result of initial audit.</inlineHelpText>
        <label>DT Audit Results</label>
        <picklist>
            <picklistValues>
                <fullName>Meets Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Borderline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Way behind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unreviewed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DTAuditStage__c</fullName>
        <description>Stage of the Audit that is being processed.</description>
        <inlineHelpText>The current Audit being processed.</inlineHelpText>
        <label>DT Audit Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Entry Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Audit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DTAuditStatus__c</fullName>
        <description>Status of the current audit.</description>
        <inlineHelpText>Status of Current Audit.  If Approved, auto-email was sent.</inlineHelpText>
        <label>DT Audit Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved with Provision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unreviewed</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DTAuditTasksRemaining__c</fullName>
        <description>The number of tasks remaining for this current audit</description>
        <label>DT Audit #Tasks Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DTCohortMonth__c</fullName>
        <formula>TEXT( FieldExperience__r.Cohort__r.CohortMonth__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DT Cohort Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTCohortYear__c</fullName>
        <formula>TEXT( FieldExperience__r.Cohort__r.CohortYear__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DT Cohort Year</label>
        <type>Text</type>
    </fields>
</CustomObject>